ĝardeno/araneujo/k8s/abelisto-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: abelisto
  name: abelisto
spec:
  replicas: 1
  selector: 
    matchLabels:
      io.kompose.service: abelisto
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/local/bin/kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: abelisto
    spec:
      containers:
      - env:
        - name: ADMINER_DESIGN
          value: hever
        image: adminer
        name: abelisto
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
