ĝardeno/araneujo/k8s/abelo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: abelo
  name: abelo
spec:
  replicas: 1
  selector: 
    matchLabels:
      io.kompose.service: abelo
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/local/bin/kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: abelo
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: usr_web277_1
        - name: MYSQL_PASSWORD_FILE
          value: /run/secrets/voko-abelo.mysql_password
        - name: MYSQL_ROOT_PASSWORD_FILE
          value: /run/secrets/voko-abelo.mysql_root_password
        - name: MYSQL_USER
          value: web277
        image: registry.local:5000/voko-abelo
        name: abelo
        resources: {}
      restartPolicy: Always
status: {}
