ĝardeno/araneujo/k8s/sesio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: sesio
  name: sesio
spec:
  replicas: 1
  selector: 
    matchLabels:
      io.kompose.service: sesio
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/local/bin/kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: sesio
    spec:
      containers:
      - image: registry.local:5000/voko-sesio
        name: sesio
        ports:
        - containerPort: 21
        - containerPort: 21200
        - containerPort: 21201
        - containerPort: 21202
        - containerPort: 21203
        - containerPort: 21204
        - containerPort: 21205
        - containerPort: 21206
        - containerPort: 21207
        - containerPort: 21208
        - containerPort: 21209
        - containerPort: 21210
        resources: {}
        volumeMounts:
        - mountPath: /home/vsftpd/alveno
          name: alveno
        - mountPath: /var/log/vsftpd
          name: sesio-log
      restartPolicy: Always
      volumes:
      - name: alveno
        persistentVolumeClaim:
          claimName: alveno
      - name: sesio-log
        persistentVolumeClaim:
          claimName: sesio-log
status: {}
