ĝardeno/araneujo/k8s/tomocero-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: tomocero
  name: tomocero
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: /usr/local/bin/kompose convert
        kompose.version: 1.19.0 (f63a961c)
      creationTimestamp: null
      labels:
        io.kompose.service: tomocero
    spec:
      containers:
      - args:
        - /usr/lib/postfix/master
        - -d
        image: voko-tomocero
        name: tomocero
        resources: {}
        volumeMounts:
        - mountPath: /var/mail
          name: mail
        - mountPath: /var/spool
          name: spool
      restartPolicy: Always
      volumes:
      - name: mail
        persistentVolumeClaim:
          claimName: mail
      - name: spool
        persistentVolumeClaim:
          claimName: spool
status: {}
