ĝardeno/araneujo/k8s/abelisto-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: abelisto
  name: abelisto
spec:
  ports:
  - name: "8089"
    port: 8089
    targetPort: 8080
  selector:
    io.kompose.service: abelisto
status:
  loadBalancer: {}
