ĝardeno/araneujo/k8s/araneo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: /usr/local/bin/kompose convert
    kompose.version: 1.19.0 (f63a961c)
  creationTimestamp: null
  labels:
    io.kompose.service: araneo
  name: araneo
spec:
  ports:
  - name: "8088"
    port: 8088
    targetPort: 80
  selector:
    io.kompose.service: araneo
status:
  loadBalancer: {}

# https://kubernetes.io/docs/tasks/debug-application-cluster/debug-service/
